--- a/package.json
+++ b/package.json
@@ -11,5 +11,9 @@
   },
   "dependencies": {
     "astro": "^2.10.3"
+  },
+  "devDependencies": {
+    "gsap": "^3.12.2",
+    "sass": "^1.65.1"
   }
 }
