feat(index):タグマネージャー追加

--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/image": "^0.17.3",
     "astro": "^2.10.3",
     "p5": "^1.7.0"
   },
   "devDependencies": {
+    "@astrojs/partytown": "^1.2.3",
     "@types/p5": "^1.6.2",
     "gsap": "^3.12.2",
     "sass": "^1.65.1"
