--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@astrojs/image": "^0.17.3",
+    "@julian_cataldo/astro-lightbox": "^0.10.11",
     "astro": "^2.10.3",
     "p5": "^1.7.0"
   },
